--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-sandbox",
+  "name": "jest-transformer-md",
   "version": "1.0.0",
   "main": "src/index.js",
   "author": "caleb.peterson@zapier.com",
